[gd_scene load_steps=6 format=2]

[ext_resource path="res://Test/MainWordThaiLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Test/Purifying/PurifyingWordDock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Test/Purifying/TestPurifying.gd" type="Script" id=3]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Purifying" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.772549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explanation" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 18.2215
margin_bottom = 32.2215
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "_guess_the_words_meaning"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thai" parent="." instance=ExtResource( 1 )]
visible = false

[node name="PurifyingWordDock1" parent="." instance=ExtResource( 2 )]
position = Vector2( 62.2242, 28.0378 )

[node name="PurifyingWordDock2" parent="." instance=ExtResource( 2 )]
position = Vector2( 57.3053, 121.743 )

[node name="PurifyingWordDock3" parent="." instance=ExtResource( 2 )]
position = Vector2( 265.867, 122.235 )

[node name="PurifyingWordDock4" parent="." instance=ExtResource( 2 )]
position = Vector2( 259.473, 24.8405 )

[node name="PurifyingWordDock5" parent="." instance=ExtResource( 2 )]
position = Vector2( 157.405, 158.881 )
